[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["qwert779 <kacper.blakala@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.25.0"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
